# Line64

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_CONTEXT.md  README.md
.github/workflows/: ci.yml  verification.yml
benchmark_results/: line64_phase1_diagram_fields.jsonl  line64_phase1_results.jsonl  line64_phase1_with_boost_capacity32768_results.jsonl  line64_phase1_with_boost_capacity65536_failed_partial.jsonl  line64_post_pr9_no_boost_capacity65536_results.jsonl  line64_post_pr9_with_boost_capacity32768_results.jsonl  line64_post_pr9_with_boost_capacity32768_summary.json  line64_post_pr9_with_boost_capacity32768_summary.md
benchmarks/: CMakeLists.txt  benchmark_support.h  queue_benchmark.cpp
benchmarks/external_baselines/: atomic_queue_mpmc_adapter.h  benchmark_message.h  blocking_queue_adapter.h  boost_lockfree_mpmc_adapter.h  boost_lockfree_spsc_adapter.h  line64_mpmc_adapter.h  line64_spsc_adapter.h  moodycamel_mpmc_adapter.h  rigtorp_spsc_adapter.h
cmake/: OrbitQueueConfig.cmake.in
docs/: architecture.md  benchmarking.md  correctness_strategy.md  design_decisions.md  design_explorations.md  legacy_context_summary.md  memory_model.md  mpmc_queue.md  queue_contracts.md  research_motivation.md  stress_testing.md
include/orbitqueue/: blocking_queue.h  fixed_message.h  mpmc_queue.h  result.h  spmc_multicast_queue.h  spsc_queue.h  version.h
stress/: CMakeLists.txt  queue_stress.cpp
tests/: CMakeLists.txt  benchmark_support_tests.cpp  blocking_queue_tests.cpp  fixed_message_tests.cpp  mpmc_queue_tests.cpp  run_downstream_test.cmake  spmc_multicast_queue_tests.cpp  spsc_queue_tests.cpp  test_main.cpp  test_support.h
tests/downstream/: CMakeLists.txt  main.cpp
tests/header_self_sufficiency/: blocking_queue.cpp  fixed_message.cpp  result.cpp  spmc_multicast_queue.cpp  spsc_queue.cpp
verification/: README.md  claims.md  results.md  run_genmc.sh  run_negative_controls.sh  run_tlc.sh
verification/genmc/: mpmc_core.c  spmc_mutex_core.c  spsc_core.c
verification/tla/: BlockingQueue.cfg  BlockingQueue.tla  MPMCQueue.cfg  MPMCQueue.tla  SPMCMulticastQueue.cfg  SPMCMulticastQueue.tla  SPSCQueue.cfg  SPSCQueue.tla
